# Aqon

./: .gitignore  Cargo.toml  README.md  test_cli.ps1
src/: lib.rs  main.rs
src/converter/: docx_reader.rs  markdown_writer.rs  mod.rs  pdf_writer.rs  tests.rs  xlsx_reader.rs
src/utils/: mod.rs
tests/: common.rs  integration_test.rs
