[package]
name = "Aqon"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for batch conversion of Word and Excel documents to PDF"
authors = ["Aqon Team"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
docx-rs = "0.4"
calamine = "0.22"
genpdf = "0.2"
anyhow = "1.0"
walkdir = "2.4"
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
colored = "2.0"
notify = "5.1"

[dev-dependencies]
tempfile = "3.8"
